--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         version_timber = "4.7.1"
         version_dagger = "2.27"
         version_retrofit = "2.8.1"
+        version_okhttp3 = "4.7.2"
         version_jetpack_navigation = "2.3.0-alpha06"
         version_fragment = "1.3.0-alpha04"
         version_viewpager2 = "1.1.0-alpha01"
